[backend/frontend] Remove expectations results without values